# Swach

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/core/: app.hpp
include/infra/: gstreamer.hpp
include/types/: app_config.hpp  snapshot.hpp
include/utils/: logger.hpp
src/: main.cpp
src/core/: app.cpp
src/infra/: gstreamer.cpp
src/types/: snapshot.cpp
src/utils/: logger.cpp
